--- a/learn-bizapps-pr/flow/get-started-with-flow/4-quiz-flow-get-started.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/4-quiz-flow-get-started.yml
@@ -1,52 +1,57 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-get-started.4-quiz-flow-get-started
-title: Check your knowledge
-metadata: 
-  title: "Knowledge check: Get a flow started" 
-  description: This knowledge check tests your knowledge of how to get a flow started. 
+title: Überprüfen Sie Ihre Kenntnisse
+metadata:
+  title: 'Wissenstest: Starten eines Flows'
+  description: In dieser Wissensbeurteilung wird Ihr Wissen über das Starten eines Flows getestet.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-durationInMinutes: 12 
-quiz: 
-  title: "Knowledge check: Get a flow started" 
-  questions: 
-  - content: Where do you get a flow started? 
-    choices:  
-    - content: Only on the Microsoft Flow website.
-      incorrectExplanation: The Microsoft Flow website is only one place where you start a flow. You can also start a flow on the mobile app.
-      isCorrect: false 
-    - content: By downloading the Microsoft Flow app.
-      correctExplanation: Simple flows can be started from the app.
-      isCorrect: true 
+  ms.openlocfilehash: 7bdac9b25f8a355797dc0093d289e85f87f1b740
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44330300"
+durationInMinutes: 12
+quiz:
+  title: 'Wissenstest: Starten eines Flows'
+  questions:
+  - content: Wo wird ein Flow gestartet?
+    choices:
+    - content: Auf der Microsoft Flow-Website.
+      incorrectExplanation: Die Microsoft Flow-Website ist nur ein Ort zum Starten eines Flows. Sie können einen Flow auch über die mobile App starten.
+      isCorrect: false
+    - content: Durch Herunterladen der Microsoft Flow-App.
+      correctExplanation: Einfache Flows können über die App gestartet werden.
+      isCorrect: true
     - content: In Microsoft Dynamics 365.
-      incorrectExplanation: Dynamics 365 is where you can view many apps and services. It isn't where you start a flow. 
-      isCorrect: false 
-    - content: In Microsoft PowerApps Studio.
-      incorrectExplanation: PowerApps Studio is where you can design PowerApps apps. It isn't where you start a flow, even though flows can work with PowerApps apps. 
-      isCorrect: false 
-  - content: Which of the following statements about flows is true? 
-    choices: 
-    - content: They respond to triggers and variables. 
-      incorrectExplanation: Flows respond to triggers and actions, not variables. 
-      isCorrect: false 
-    - content: They respond to triggers and actions. 
-      correctExplanation: Triggers and actions are both used to develop flows. 
-      isCorrect: true 
-    - content: They respond to actions and methods. 
-      incorrectExplanation: They respond to triggers and actions, not methods. 
-      isCorrect: false 
-  - content: Which of the following statements about the Microsoft Flow mobile app is true? 
-    choices: 
-    - content: You can't create a flow from the mobile app. You can only view the result of a flow. 
-      incorrectExplanation: You can create simple flows from the mobile app, like a button flow to send a sick day message to your manager. 
-      isCorrect: false 
-    - content: You can create a flow from the mobile app. 
-      correctExplanation: You can create flows from the mobile app and also from the Microsoft Flow website. 
-      isCorrect: true 
-    - content: You can't create flows that work with PowerApps apps. 
-      incorrectExplanation: You can set up flows to work with PowerApps apps. 
+      incorrectExplanation: In Dynamics 365 können Sie eine Vielzahl von Apps und Diensten anzeigen. Dort werden jedoch keine Flows gestartet.
+      isCorrect: false
+    - content: In Microsoft PowerApps Studio
+      incorrectExplanation: In PowerApps Studio können Sie PowerApps-Apps entwerfen. Dort werden keine Flows gestartet, obwohl Flows mit PowerApps-Apps kompatibel sind.
+      isCorrect: false
+  - content: Welche der folgenden Aussagen über Flows trifft zu?
+    choices:
+    - content: Sie reagieren auf Trigger und Variablen.
+      incorrectExplanation: Flows reagieren auf Trigger und Aktionen, nicht auf Variablen.
+      isCorrect: false
+    - content: Sie reagieren auf Trigger und Aktionen.
+      correctExplanation: Trigger und Aktionen werden für die Entwicklung von Flows verwendet.
+      isCorrect: true
+    - content: Sie reagieren auf Aktionen und Methoden.
+      incorrectExplanation: Flows reagieren auf Trigger und Aktionen, nicht auf Methoden.
+      isCorrect: false
+  - content: Welche der folgenden Aussagen über die mobile Microsoft Flow-App trifft zu?
+    choices:
+    - content: Ein Flow kann nicht über die mobile App erstellt werden. Es können nur die Ergebnisse eines Flows angezeigt werden.
+      incorrectExplanation: Es können einfache Flows über die mobile App erstellt werden, z.B. ein Flow für eine Schaltfläche, über die eine Krankmeldung an den Vorgesetzten gesendet werden kann.
+      isCorrect: false
+    - content: Ein Flow kann über die mobile App erstellt werden.
+      correctExplanation: Ein Flow kann über die mobile App und über die Microsoft Flow-Website erstellt werden.
+      isCorrect: true
+    - content: Es können keine Flows erstellt werden, die mit PowerApps-Apps kompatibel sind.
+      incorrectExplanation: Flows können für die Kompatibilität mit PowerApps-Apps eingerichtet werden.
       isCorrect: false
