--- a/learn-bizapps-pr/paths/create-powerapps/index.yml
+++ b/learn-bizapps-pr/paths/create-powerapps/index.yml
@@ -1,8 +1,22 @@
 ### YamlMime:LearningPath
 uid: learn-bizapps.create-powerapps
+metadata:
+  title: Erstellen einer App in PowerApps
+  description: In diesem Lernpfad erhalten Sie eine Einführung in PowerApps und Unterstützung beim Erstellen und Anpassen einer App und erfahren, wie Sie erstellte Apps verwalten und verteilen können.
+  ms.date: 09/24/2018
+  author: margoc
+  ms.author: margoc
+  ms.topic: interactive-tutorial
+  ms.prod: learning-powerapps
+  ms.openlocfilehash: 8d2808d6328ba07f29c177ca3f80a8cb71090b73
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44326617"
 title: Erstellen einer App in PowerApps
 summary: In diesem Lernpfad erhalten Sie eine Einführung in PowerApps und Unterstützung beim Erstellen und Anpassen einer App und erfahren, wie Sie erstellte Apps verwalten und verteilen können.
-cardDescription: Erstellen, Anpassen und Freigeben einer App
+prerequisites: "- Vertrautheit mit OneDrive, SharePoint und Excel. \n"
 iconUrl: http://via.placeholder.com/120x120
 levels:
 - beginner
@@ -10,16 +24,6 @@ roles:
 - business-user
 products:
 - bizapps-power-apps
-prerequisites: In diesem Lernpfad wird vorausgesetzt, dass Sie sich mit OneDrive, SharePoint und Excel auskennen.
-metadata:
-  title: Erstellen einer App in PowerApps
-  description: In diesem Lernpfad erhalten Sie eine Einführung in PowerApps und Unterstützung beim Erstellen und Anpassen einer App und erfahren, wie Sie erstellte Apps verwalten und verteilen können.
-  ms.openlocfilehash: e810d3f3e316dbc056336822fc9657e066d1958d
-  ms.sourcegitcommit: d2e8b297a840d5958013d9a61963ce41c6b4ed22
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 09/06/2018
-  ms.locfileid: "43848221"
 modules:
 - learn-bizapps.powerapps-get-started
 - learn-bizapps.powerapps-customize
