--- a/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-model-driven-apps-in-powerapps/index.yml
@@ -1,30 +1,33 @@
-### YamlMime:Module 
-uid: learn-bizapps.powerapps-design-model-driven-apps 
-metadata: 
-  title: Get started with model-driven apps 
-  description: Model-driven app design is an approach that focuses on quickly adding components to your apps. These components include dashboards, forms, views, and charts. With no code, or very little, you can make apps that are simple or very complex. Unlike in canvas app development, where the designer has total control over app layout, much of the layout in model-driven apps is determined by the components you add. In other words, the emphasis is more on quickly viewing your business data and making decisions than on intricate app design.
+### YamlMime:Module
+uid: learn-bizapps.powerapps-design-model-driven-apps
+metadata:
+  title: Erste Schritte mit modellgesteuerten Apps
+  description: Der Entwurf einer modellgesteuerten App ist ein Ansatz, der sich auf das schnelle Hinzufügen von Komponenten zu Ihren Apps konzentriert. Zu diesen Komponenten gehören Dashboards, Formulare, Ansichten und Diagramme. Mit keinem bzw. sehr wenig Code können Sie Apps erstellen, die einfach oder sehr komplex sind. Im Gegensatz zur Canvas-App-Entwicklung, in der der Designer die vollständige Kontrolle über das App-Layout hat, wird ein Großteil des Layouts in modellgesteuerten Apps von den Komponenten bestimmt, die Sie hinzufügen. Anders gesagt, der Schwerpunkt liegt mehr auf dem schnellen Anzeigen Ihrer Geschäftsdaten und der Entscheidungsfindung als auf anspruchsvollem App-Design.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-title: Get started with model-driven apps
-summary: Learn how to view business data quickly with a model-driven approach.
-#TODO: Update abstract to be in the format 'In this module, you will: X, Y, Z...'
-abstract: Model-driven app design is an approach that focuses on quickly adding components to your apps. These components include dashboards, forms, views, and charts. With no code, or very little, you can make apps that are simple or very complex. Unlike in canvas app development, where the designer has total control over app layout, much of the layout in model-driven apps is determined by the components you add. In other words, the emphasis is more on quickly viewing your business data and making decisions than on intricate app design.
-prerequisites: None
-#TODO: Update with real image.
-iconUrl: http://via.placeholder.com/120x120 
-levels:  
-- beginner 
-roles:  
-- business-user 
-products:  
+  ms.openlocfilehash: 51feec8f5a4646e622a8eeebbd9732412bb4dfa3
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500349"
+title: Erste Schritte mit modellgesteuerten Apps
+summary: Erfahren Sie, wie Sie Geschäftsdaten schnell mit einem modellgesteuerten Ansatz anzeigen.
+abstract: Der Entwurf einer modellgesteuerten App ist ein Ansatz, der sich auf das schnelle Hinzufügen von Komponenten zu Ihren Apps konzentriert. Zu diesen Komponenten gehören Dashboards, Formulare, Ansichten und Diagramme. Mit keinem bzw. sehr wenig Code können Sie Apps erstellen, die einfach oder sehr komplex sind. Im Gegensatz zur Canvas-App-Entwicklung, in der der Designer die vollständige Kontrolle über das App-Layout hat, wird ein Großteil des Layouts in modellgesteuerten Apps von den Komponenten bestimmt, die Sie hinzufügen. Anders gesagt, der Schwerpunkt liegt mehr auf dem schnellen Anzeigen Ihrer Geschäftsdaten und der Entscheidungsfindung als auf anspruchsvollem App-Design.
+prerequisites: Keine
+iconUrl: http://via.placeholder.com/120x120
+levels:
+- beginner
+roles:
+- business-user
+products:
 - bizapps
 - bizapps-d365
 - bizapps-power-apps
-units: 
+units:
 - learn-bizapps.powerapps-design-model-driven-apps.1-introduction
 - learn-bizapps.powerapps-design-model-driven-apps.2-building-blocks-of-model-driven-apps
 - learn-bizapps.powerapps-design-model-driven-apps.3-create-a-model-driven-app
@@ -32,4 +35,4 @@ units:
 - learn-bizapps.powerapps-design-model-driven-apps.5-control-security-when-sharing-model-driven-apps
 - learn-bizapps.powerapps-design-model-driven-apps.6-knowledge-check
 - learn-bizapps.powerapps-design-model-driven-apps.7-summary
-achievement: learn.powerapps-design-model-driven-apps.badge  
+achievement: learn.powerapps-design-model-driven-apps.badge
