--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/4-import-data-into-your-database.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/4-import-data-into-your-database.yml
@@ -1,15 +1,19 @@
-### YamlMime:ModuleUnit 
+### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-common-data-service.4-import-data-into-your-database
-title: Import data into your database  
-metadata: 
-  title: Import data into your database
-  description: Import data into your database
+title: Erstellen einer Entität und Importieren von Daten in Ihre CDS für Apps-Datenbank
+metadata:
+  title: Importieren von Daten in Ihre Datenbank
+  description: Importieren von Daten in Ihre Datenbank
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-durationInMinutes: 12 
-content: | 
-  [!include[](includes/4-import-data-into-your-database.md)]  
+  ms.openlocfilehash: bc4e6fd8f05a309cf66ff7b3d6d9782d2779a656
+  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/11/2018
+  ms.locfileid: "44375097"
+durationInMinutes: 12
+content: '[!include[](includes/4-import-data-into-your-database.md)]'
