--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/index.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps-common-data-service/index.yml
@@ -1,34 +1,37 @@
-### YamlMime:Module 
+### YamlMime:Module
 uid: learn-bizapps.powerapps-common-data-service
-metadata: 
-  title: Get started with the Common Data Service 
-  description: The Common Data Service for apps lets you securely store and manage data that's used by business applications. Standard and custom entities within CDS for Apps provide a secure and cloud-based storage option for your data.
+metadata:
+  title: Erste Schritte mit dem Common Data Service
+  description: Mit dem Common Data Service für Apps können Sie Daten, die von Geschäftsanwendungen verwendet werden, sicher speichern und verwalten. Standard- und benutzerdefinierte Entitäten in CDS für Apps bieten eine sichere und cloudbasierte Speicheroption für Ihre Daten.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-title: Get started with the Common Data Service
-summary: The Common Data Service (CDS) for apps lets you store and manage data.
-#TODO: Update abstract to be in the format 'In this module, you will: X, Y, Z...' right now the summary and the abstract are duplicating information and they're shown right next to each other on the module landing page.
-abstract: The Common Data Service for apps lets you securely store and manage data that's used by business applications. Standard and custom entities within CDS for Apps provide a secure and cloud-based storage option for your data.
-prerequisites: None
-#TODO: Update with real image.
-iconUrl: http://via.placeholder.com/120x120 
-levels:  
-- beginner 
-roles:  
-- business-user 
-products:  
+  ms.openlocfilehash: 3564bea0ad0c69f3d950268b2d1b5a22b984541c
+  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/12/2018
+  ms.locfileid: "44500372"
+title: Erste Schritte mit dem Common Data Service
+summary: Mit dem Common Data Service (CDS) für Apps können Sie Daten speichern und verwalten.
+abstract: Mit dem Common Data Service für Apps können Sie Daten, die von Geschäftsanwendungen verwendet werden, sicher speichern und verwalten. Standard- und benutzerdefinierte Entitäten in CDS für Apps bieten eine sichere und cloudbasierte Speicheroption für Ihre Daten.
+prerequisites: Keine
+iconUrl: http://via.placeholder.com/120x120
+levels:
+- beginner
+roles:
+- business-user
+products:
 - bizapps
 - bizapps-d365
 - bizapps-flow
 - bizapps-power-apps
-units: 
+units:
 - learn-bizapps.powerapps-common-data-service.1-introduction
 - learn-bizapps.powerapps-common-data-service.2-learn-about-entities
 - learn-bizapps.powerapps-common-data-service.3-create-a-cds-entity
 - learn-bizapps.powerapps-common-data-service.4-import-data-into-your-database
 - learn-bizapps.powerapps-common-data-service.5-summary
-achievement: learn.powerapps-common-data-service.badge 
+achievement: learn.powerapps-common-data-service.badge
