--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/5-quiz-powerapps-manage.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/5-quiz-powerapps-manage.yml
@@ -1,50 +1,54 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-manage.5-quiz-manage-apps
-title: Check your knowledge
+title: Überprüfen Sie Ihre Kenntnisse
 metadata:
-  title: "Knowledge check: Manage apps in PowerApps"
-  description: This knowledge check tests your knowledge of how to manage apps in PowerApps.
+  title: 'Wissenstest: Verwalten von Apps in PowerApps'
+  description: In dieser Wissensbeurteilung wird Ihr Wissen über das Verwalten von Apps in PowerApps getestet.
   ms.date: 09/24/2018
-  #TODO: Update with real author name.
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
+  ms.openlocfilehash: 54822810fd2b4d28e304f893c917fbb0bd2d8b77
+  ms.sourcegitcommit: a6cdd11ea6d5cffdd264c005b6e2f15c00854553
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 09/10/2018
+  ms.locfileid: "44331235"
 durationInMinutes: 8
 quiz:
-  title: "Knowledge check: Manage apps in PowerApps"
+  title: 'Wissenstest: Verwalten von Apps in PowerApps'
   questions:
-  - content: What happens when you restore a previous version of an app?
-    choices: 
-    - content: The original app version is overwritten by a new one.
-      incorrectExplanation: The original version isn't overwritten. Another version is created.
-      isCorrect: false
-    - content: The new version is automatically available to everyone with whom the app is shared.
-      incorrectExplanation: The new version is added to your list of versions. It isn't automatically ready for team members to use until you explicitly publish it.
-      isCorrect: false
-    - content: The new version is added to the list of versions.
-      correctExplanation: When an app is restored, the old version is never removed or overwritten. The new version just gets an incremented version number and is added to the top of the list.
-      isCorrect: true
-  - content: What happens when you share a new version of an app?
+  - content: Was passiert, wenn Sie eine frühere Version einer App wiederherstellen?
     choices:
-    - content: To see the new version, everyone with whom the app was shared must reinstall it.
-      incorrectExplanation: Everyone with whom you shared the app sees the new version automatically.
+    - content: Die ursprüngliche Version der App wird mit einer neuen Version überschrieben.
+      incorrectExplanation: Die ursprüngliche Version wird nicht überschrieben. Es wird eine weitere Version erstellt.
       isCorrect: false
-    - content: Everyone with whom you shared the app will automatically see the new version.
-      correctExplanation: Everyone with whom you shared the app will automatically see the new version.
+    - content: Die neue Version ist automatisch für jeden Benutzer verfügbar, für den die App freigegeben wurde.
+      incorrectExplanation: Die neue Version wird Ihrer Liste der Versionen hinzugefügt. Sie steht Ihren Teammitgliedern nicht automatisch zur Verfügung, sondern erst dann, wenn Sie sie explizit veröffentlichen.
+      isCorrect: false
+    - content: Die neue Version wird der Liste der Versionen hinzugefügt.
+      correctExplanation: Wenn eine App wiederhergestellt wird, wird die alte Version nie entfernt oder überschrieben. Die neue Version erhält nur eine inkrementierte Versionsnummer und wird ganz oben in der Liste hinzugefügt.
       isCorrect: true
-    - content: All previous versions are deleted.
-      incorrectExplanation: Previous versions are retained unless you delete the app.
-      isCorrect: false
-  - content: Which two groups need to know about environments?
+  - content: Was passiert, wenn Sie eine neue Version einer App freigeben?
     choices:
-    - content: Administrators.
-      correctExplanation: Only administrators can create environments.
+    - content: Um die neue Version anzuzeigen, muss jeder Benutzer, für den die App freigegeben wurde, sie neu installieren.
+      incorrectExplanation: Jedem Benutzer, für den Sie die App freigegeben haben, wird die neue Version automatisch angezeigt.
+      isCorrect: false
+    - content: Jedem Benutzer, für den Sie die App freigegeben haben, wird die neue Version automatisch angezeigt.
+      correctExplanation: Jedem Benutzer, für den Sie die App freigegeben haben, wird die neue Version automatisch angezeigt.
       isCorrect: true
-    - content: App users.
-      incorrectExplanation: App users can open shared apps regardless of the environment in which the apps were created.
+    - content: Alle vorherigen Versionen werden gelöscht.
+      incorrectExplanation: Die vorherigen Versionen werden beibehalten, bis Sie die App löschen.
       isCorrect: false
-    - content: App designers.
-      incorrectExplanation: App designers don't need to know about environments.
+  - content: Welche beiden Gruppen müssen sich mit Umgebungen auskennen?
+    choices:
+    - content: Administratoren.
+      correctExplanation: Nur Administratoren können Umgebungen erstellen.
+      isCorrect: true
+    - content: App-Benutzer.
+      incorrectExplanation: App-Benutzer können freigegebene Apps unabhängig von der Umgebung öffnen, in der die Apps erstellt wurden.
       isCorrect: false
-      
+    - content: App-Designer.
+      incorrectExplanation: App-Designer müssen sich nicht mit Umgebungen auskennen.
+      isCorrect: false
