--- a/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/5-summary-cleanup.yml
+++ b/learn-bizapps-pr/powerapps/customize-apps-in-powerapps/5-summary-cleanup.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-customize.5-summary-cleanup
 metadata:
-  title: Zusammenfassung und Cleanup
-  description: Zusammenfassung und Cleanup
+  title: Zusammenfassung
+  description: Zusammenfassung
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: 46a2d5ffbb3e21f5805fbf4a57a29b0d73c95765
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: 5169e33a72be1a6da9d989302b4a687c8d34b586
+  ms.sourcegitcommit: b24c74f0ef4b2d10d02d5fa831bb19166182e81f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651662"
-title: Zusammenfassung und Cleanup
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46012273"
+title: Zusammenfassung
 durationInMinutes: 2
 content: '[!include[](includes/5-summary-cleanup.md)]'
