commit bilingual contents

--- a/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/6-summary-cleanup.yml
+++ b/learn-bizapps-pr/powerapps/manage-apps-in-powerapps/6-summary-cleanup.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-manage.6-summary-cleanup
 metadata:
-  title: <span data-ttu-id="b5563-101">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="b5563-101">Summary and cleanup</span></span>
-  description: <span data-ttu-id="b5563-102">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="b5563-102">Summary and cleanup</span></span>
+  title: <span data-ttu-id="bcfba-101">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="bcfba-101">Summary</span></span>
+  description: <span data-ttu-id="bcfba-102">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="bcfba-102">Summary</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: c1bee83c9ad0fd5644f38558b23d5c7184ededbc
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: 96214cda71b25c253733c935e5d1fe84b3fd9644
+  ms.sourcegitcommit: b24c74f0ef4b2d10d02d5fa831bb19166182e81f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651593"
-title: <span data-ttu-id="b5563-103">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="b5563-103">Summary and cleanup</span></span>
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46012411"
+title: <span data-ttu-id="bcfba-103">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="bcfba-103">Summary</span></span>
 durationInMinutes: 2
 content: '[!include[](includes/6-summary-cleanup.md)]'
