--- a/learn-bizapps-pr/flow/get-started-with-flow/5-summary-cleanup.yml
+++ b/learn-bizapps-pr/flow/get-started-with-flow/5-summary-cleanup.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.flow-get-started.5-summary-cleanup
 metadata:
-  title: <span data-ttu-id="65ebc-101">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="65ebc-101">Summary and cleanup</span></span>
-  description: <span data-ttu-id="65ebc-102">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="65ebc-102">Summary and cleanup</span></span>
+  title: <span data-ttu-id="542b7-101">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="542b7-101">Summary</span></span>
+  description: <span data-ttu-id="542b7-102">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="542b7-102">Summary</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-flow
-  ms.openlocfilehash: 96f0c1eb601b53ccfa977e39f182212fbe834963
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: 01a7544f960967fec9a6bfcccbfff18d162bf2bd
+  ms.sourcegitcommit: b24c74f0ef4b2d10d02d5fa831bb19166182e81f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651616"
-title: <span data-ttu-id="65ebc-103">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="65ebc-103">Summary and cleanup</span></span>
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46012296"
+title: <span data-ttu-id="542b7-103">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="542b7-103">Summary</span></span>
 durationInMinutes: 2
 content: '[!include[](includes/5-summary-cleanup.md)]'
