--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/6-summary-cleanup.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/6-summary-cleanup.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.build-your-first-report.6-summary-cleanup
 metadata:
-  title: <span data-ttu-id="105af-101">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="105af-101">Summary and cleanup</span></span>
-  description: <span data-ttu-id="105af-102">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="105af-102">Summary and cleanup</span></span>
+  title: <span data-ttu-id="efc58-101">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="efc58-101">Summary</span></span>
+  description: <span data-ttu-id="efc58-102">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="efc58-102">Summary</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: 8cea4cea91d40415f03302e015be188f10f4ec34
-  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.openlocfilehash: ad788a15584878f83ef42079e7e75595f192bb54
+  ms.sourcegitcommit: b24c74f0ef4b2d10d02d5fa831bb19166182e81f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/12/2018
-  ms.locfileid: "44500418"
-title: <span data-ttu-id="105af-103">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="105af-103">Summary and cleanup</span></span>
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46012250"
+title: <span data-ttu-id="efc58-103">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="efc58-103">Summary</span></span>
 durationInMinutes: 2
 content: '[!include[](includes/6-summary-cleanup.md)]'
