--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/5-summary-cleanup.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/5-summary-cleanup.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.get-started-with-power-bi.5-summary-cleanup
 metadata:
-  title: <span data-ttu-id="0585b-101">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="0585b-101">Summary and cleanup</span></span>
-  description: <span data-ttu-id="0585b-102">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="0585b-102">Summary and cleanup</span></span>
+  title: <span data-ttu-id="ecc74-101">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="ecc74-101">Summary</span></span>
+  description: <span data-ttu-id="ecc74-102">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="ecc74-102">Summary</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: 171995fe0d33990a9e39aff4c69710a017caa55a
-  ms.sourcegitcommit: 6d796874539f76b734a7bb8ff95bef6b87bb9b00
+  ms.openlocfilehash: 8687b3b7527b8e7d529f90c148c2e5c68beaa414
+  ms.sourcegitcommit: b24c74f0ef4b2d10d02d5fa831bb19166182e81f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/11/2018
-  ms.locfileid: "44374982"
-title: <span data-ttu-id="0585b-103">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="0585b-103">Summary and cleanup</span></span>
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46012480"
+title: <span data-ttu-id="ecc74-103">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="ecc74-103">Summary</span></span>
 durationInMinutes: 5
 content: '[!include[](includes/5-summary-cleanup.md)]'
