--- a/learn-bizapps-pr/powerapps/get-started-with-powerapps/7-summary-cleanup.yml
+++ b/learn-bizapps-pr/powerapps/get-started-with-powerapps/7-summary-cleanup.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.powerapps-get-started.7-summary-cleanup
 metadata:
-  title: <span data-ttu-id="af629-101">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="af629-101">Summary and cleanup</span></span>
-  description: <span data-ttu-id="af629-102">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="af629-102">Summary and cleanup</span></span>
+  title: <span data-ttu-id="2d169-101">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="2d169-101">Summary</span></span>
+  description: <span data-ttu-id="2d169-102">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="2d169-102">Summary</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerapps
-  ms.openlocfilehash: 95e2cac76e8a4651426b7ee6c0f0c0eb65acefcf
-  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
+  ms.openlocfilehash: 6f1e82b1fd49c94d9f74bcf2d5afc16feca3089a
+  ms.sourcegitcommit: b24c74f0ef4b2d10d02d5fa831bb19166182e81f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45651570"
-title: <span data-ttu-id="af629-103">Zusammenfassung und Cleanup</span><span class="sxs-lookup"><span data-stu-id="af629-103">Summary and cleanup</span></span>
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46012365"
+title: <span data-ttu-id="2d169-103">Zusammenfassung</span><span class="sxs-lookup"><span data-stu-id="2d169-103">Summary</span></span>
 durationInMinutes: 2
 content: '[!include[](includes/7-summary-cleanup.md)]'
