--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
@@ -2,24 +2,21 @@
 uid: learn-bizapps.get-started-with-power-bi
 metadata:
   title: Erste Schritte mit Power BI
-  description: Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Lernen Sie die Grundlagen von Power BI, erfahren Sie, welche Power BI-Dienste und -Anwendungen zusammenarbeiten und wie diese zum Erstellen oder Nutzen überzeugender Visuals und Analysen basierend auf Ihren Daten verwendet werden können.
+  description: Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können diese Berichte allein nutzen oder für andere Personen in oder außerhalb Ihrer Organisation freigeben. Erfahren Sie mehr über die Grundlagen von Power BI, wie die Dienste und Anwendungen zusammenarbeiten und wie Sie damit auf Basis Ihrer Daten überzeugende Visuals und Analysen erstellen oder verwenden können.
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-power-bi
-  ms.openlocfilehash: 5677c912fdf50f5f123312b7cb9f7214aeddacbd
-  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.openlocfilehash: f3786d5e6535d4e1ec1ab0ccbd412748e2b9694d
+  ms.sourcegitcommit: 18583a493b2543ebfcff8cc7002d2f0c67a47d3f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2018
-  ms.locfileid: "45600711"
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45659719"
 title: Erste Schritte mit Power BI
-summary: Power BI ist eine Sammlung aus Softwarediensten und Anwendungen, mit denen Sie eine Verbindung zu den unterschiedlichsten Datenquellen herstellen und überzeugende Visuals und Berichte erstellen können. Sie können durch das Abrufen dieser Berichte oder das Freigeben mit anderen Personen in oder außerhalb Ihrer Organisation profitieren. Erfahren Sie mehr über die Grundlagen von Power BI, wie die Dienste und Anwendungen zusammenarbeiten und wie Sie damit auf Basis Ihrer Daten überzeugende Visuals und Analysen erstellen oder verwenden können.
-abstract: >
-  In diesem Modul erfahren Sie,
-
-  - Wie Sie Power BI verwenden
+summary: Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.
+abstract: "In diesem Modul lernen Sie Folgendes: \n- Sie erfahren, wie Power BI-Dienste und Anwendungen zusammenarbeiten.\n- Finden Sie heraus, wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann.\n- Sie erfahren, wie Sie ansprechende visuelle Elemente und Berichte erstellen.\n"
 prerequisites: Keine
 iconUrl: /learn/achievements/get-started-with-power-bi.svg
 levels:
@@ -35,4 +32,5 @@ units:
 - learn-bizapps.get-started-with-power-bi.3-building-blocks-of-power-bi
 - learn-bizapps.get-started-with-power-bi.4-exercise-touring-and-using-power-bi
 - learn-bizapps.get-started-with-power-bi.5-summary-cleanup
+- learn-bizapps.get-started-with-power-bi.6-get-started-with-power-bi-quiz
 achievement: learn.get-started-with-power-bi.badge
