--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/index.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/index.yml
@@ -2,18 +2,18 @@
 uid: learn-bizapps.build-your-first-report
 metadata:
   title: Erstellen und Freigeben Ihres ersten Power BI-Berichts
-  description: Mit Power BI können Sie ansprechende visuelle Elemente und Berichte erstellen. In diesem Modul wird beschrieben, wie Sie Power BI Desktop zum Herstellen einer Verbindung mit Daten, Erstellen von visuellen Elementen und Erstellen eines Berichts verwenden, den Sie für andere Personen in Ihrer Organisation freigeben können. Anschließend erfahren Sie, wie Sie den Bericht für den Power BI-Dienst veröffentlichen und Ihre Erkenntnisse und die sich ergebenden Vorteile aus Ihrer Arbeit anderen Personen zugänglich machen können.
+  description: Mit Power BI können Sie ansprechende visuelle Elemente und Berichte erstellen. In diesem Modul wird beschrieben, wie Sie Power BI Desktop zum Herstellen einer Verbindung mit Daten, Erstellen von visuellen Elementen und Erstellen eines Berichts verwenden, den Sie für andere Personen in Ihrer Organisation freigeben können. Außerdem erfahren Sie, wie Sie den Bericht im Power BI-Dienst veröffentlichen, damit andere Personen von Ihren Erkenntnissen und Ihrer Arbeit profitieren können.
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-power-bi
-  ms.openlocfilehash: 433b4027cbbc72d89e7956386b95ef204eeacce6
-  ms.sourcegitcommit: 19236e5c58c29cfa95f8c68b280c7234cdfaf7e2
+  ms.openlocfilehash: 3868bb6adf1e05933171f8574c480acdeffc9704
+  ms.sourcegitcommit: 18583a493b2543ebfcff8cc7002d2f0c67a47d3f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2018
-  ms.locfileid: "45600780"
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45659696"
 title: Erstellen und Freigeben Ihres ersten Power BI-Berichts
 summary: Mit Power BI können Sie ansprechende visuelle Elemente und Berichte erstellen. In diesem Modul wird beschrieben, wie Sie Power BI Desktop zum Herstellen einer Verbindung mit Daten, Erstellen von visuellen Elementen und Erstellen eines Berichts verwenden, den Sie für andere Personen in Ihrer Organisation freigeben können. Anschließend erfahren Sie, wie Sie den Bericht für den Power BI-Dienst veröffentlichen und Ihre Erkenntnisse und die sich ergebenden Vorteile aus Ihrer Arbeit anderen Personen zugänglich machen können.
 abstract: >
@@ -38,4 +38,5 @@ units:
 - learn-bizapps.build-your-first-report.4-exercise-create-visuals-in-power-bi
 - learn-bizapps.build-your-first-report.5-exercise-share-a-power-bi-report
 - learn-bizapps.build-your-first-report.6-summary-cleanup
+- learn-bizapps.power-bi.7-build-your-first-power-bi-report-quiz
 achievement: learn.build-your-first-report.badge
