--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/index.yml
@@ -8,15 +8,15 @@ metadata:
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-power-bi
-  ms.openlocfilehash: f3786d5e6535d4e1ec1ab0ccbd412748e2b9694d
-  ms.sourcegitcommit: 18583a493b2543ebfcff8cc7002d2f0c67a47d3f
+  ms.openlocfilehash: cf4cb40955e10b84e33126d588e9c18d2d9b9a08
+  ms.sourcegitcommit: b24c74f0ef4b2d10d02d5fa831bb19166182e81f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45659719"
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46012388"
 title: Erste Schritte mit Power BI
 summary: Erfahren Sie, was Power BI ist, einschließlich der dazugehörigen Bausteine und wie diese zusammen funktionieren.
-abstract: "In diesem Modul lernen Sie Folgendes: \n- Sie erfahren, wie Power BI-Dienste und Anwendungen zusammenarbeiten.\n- Finden Sie heraus, wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann.\n- Sie erfahren, wie Sie ansprechende visuelle Elemente und Berichte erstellen.\n"
+abstract: "In diesem Modul lernen Sie Folgendes: \n- Sie erfahren, wie Power BI-Dienste und Anwendungen zusammenarbeiten.\n- Sie lernen, wie PowerApps zur Effizienz Ihres Unternehmens beitragen kann.\n- Sie erfahren, wie Sie ansprechende visuelle Elemente und Berichte erstellen.\n"
 prerequisites: Keine
 iconUrl: /learn/achievements/get-started-with-power-bi.svg
 levels:
