--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/2-connect-to-data-sources-in-power-bi-desktop.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/2-connect-to-data-sources-in-power-bi-desktop.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.build-your-first-report.2-connect-to-data-sources-in-power-bi-desktop
 metadata:
-  title: <span data-ttu-id="06b1f-101">Herstellen einer Verbindung mit einer Datenquelle in Power BI Desktop</span><span class="sxs-lookup"><span data-stu-id="06b1f-101">Connect to data source in Power BI desktop</span></span>
-  description: <span data-ttu-id="06b1f-102">Herstellen einer Verbindung mit einer Datenquelle in Power BI Desktop</span><span class="sxs-lookup"><span data-stu-id="06b1f-102">Connect to data source in Power BI desktop</span></span>
+  title: <span data-ttu-id="5f9fa-101">Herstellen einer Verbindung mit Datenquellen in Power BI Desktop</span><span class="sxs-lookup"><span data-stu-id="5f9fa-101">Connect to data sources in Power BI Desktop</span></span>
+  description: <span data-ttu-id="5f9fa-102">Herstellen einer Verbindung mit Datenquellen in Power BI Desktop</span><span class="sxs-lookup"><span data-stu-id="5f9fa-102">Connect to data sources in Power BI Desktop</span></span>
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: b223eb69ff729a949a7c490fcec437b5b1069405
-  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.openlocfilehash: 8586e7ba458e9a2977670177c3bf43d3ffb18f41
+  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/12/2018
-  ms.locfileid: "44500570"
-title: <span data-ttu-id="06b1f-103">Herstellen einer Verbindung mit einer Datenquelle in Power BI Desktop</span><span class="sxs-lookup"><span data-stu-id="06b1f-103">Connect to data source in Power BI desktop</span></span>
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45650834"
+title: <span data-ttu-id="5f9fa-103">Herstellen einer Verbindung mit Datenquellen in Power BI Desktop</span><span class="sxs-lookup"><span data-stu-id="5f9fa-103">Connect to data sources in Power BI Desktop</span></span>
 durationInMinutes: 5
 content: '[!include[](includes/2-connect-to-data-sources-in-power-bi-desktop.md)]'
