--- a/learn-bizapps-pr/power-bi/get-started-with-power-bi/4-exercise-touring-and-using-power-bi.yml
+++ b/learn-bizapps-pr/power-bi/get-started-with-power-bi/4-exercise-touring-and-using-power-bi.yml
@@ -1,19 +1,19 @@
 ### YamlMime:ModuleUnit
 uid: learn-bizapps.get-started-with-power-bi.4-exercise-touring-and-using-power-bi
 metadata:
-  title: '<span data-ttu-id="ff98e-101">Übung: Überblick über den Power BI-Dienst und dessen Nutzung</span><span class="sxs-lookup"><span data-stu-id="ff98e-101">Exercise - touring and using the Power BI service</span></span>'
-  description: '<span data-ttu-id="ff98e-102">Einführungsübung: Überblick über den Power BI-Dienst und dessen Nutzung</span><span class="sxs-lookup"><span data-stu-id="ff98e-102">IntroductiExercise - touring and using the Power BI serviceon</span></span>'
+  title: '<span data-ttu-id="0d934-101">Übung: Einführung in den Power BI-Dienst und dessen Verwendung</span><span class="sxs-lookup"><span data-stu-id="0d934-101">Exercise - Tour and use the Power BI service</span></span>'
+  description: '<span data-ttu-id="0d934-102">Übung: Einführung in den Power BI-Dienst und dessen Verwendung</span><span class="sxs-lookup"><span data-stu-id="0d934-102">Exercise - Tour and use the Power BI service</span></span>'
   ms.date: 09/24/2018
   author: margoc
   ms.author: margoc
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: 2d9adb30423a63d74e360f61e659029f539d660b
-  ms.sourcegitcommit: 88398f21cabb7c194b4292d6f3a4a10049eab76d
+  ms.openlocfilehash: 47e0b6deeb8e182a61939780f48704e6fcd3909d
+  ms.sourcegitcommit: 0d11bb189c04e6a809981a561a7cbbb59fd8e5ae
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/12/2018
-  ms.locfileid: "44500311"
-title: '<span data-ttu-id="ff98e-103">Übung: Überblick über den Power BI-Dienst und dessen Nutzung</span><span class="sxs-lookup"><span data-stu-id="ff98e-103">Exercise - touring and using the Power BI service</span></span>'
+  ms.lasthandoff: 09/15/2018
+  ms.locfileid: "45651041"
+title: '<span data-ttu-id="0d934-103">Übung: Einführung in den Power BI-Dienst und dessen Verwendung</span><span class="sxs-lookup"><span data-stu-id="0d934-103">Exercise - Tour and use the Power BI service</span></span>'
 durationInMinutes: 12
 content: '[!include[](includes/4-exercise-touring-and-using-power-bi.md)]'
