--- a/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/7-build-your-first-power-bi-report-quiz.yml
+++ b/learn-bizapps-pr/power-bi/build-your-first-power-bi-report/7-build-your-first-power-bi-report-quiz.yml
@@ -8,12 +8,12 @@ metadata:
   ms.author: davidi
   ms.topic: interactive-tutorial
   ms.prod: learning-powerbi
-  ms.openlocfilehash: 81b0353f4bf15d77f2160f34a741a98dc270beaf
-  ms.sourcegitcommit: 18583a493b2543ebfcff8cc7002d2f0c67a47d3f
+  ms.openlocfilehash: b1dc41b2e0c8fb4b6a690ba1658e8d9d6ab1de42
+  ms.sourcegitcommit: 2ab0e9afe64e936cc4cf9c4059cb610ad59deca0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/15/2018
-  ms.locfileid: "45660009"
+  ms.lasthandoff: 09/18/2018
+  ms.locfileid: "46013004"
 title: Überprüfen Sie Ihre Kenntnisse
 durationInMinutes: 10
 quiz:
@@ -22,7 +22,7 @@ quiz:
   - content: Mit welchen der folgenden Tools können Sie Datenquellen strukturieren?
     choices:
     - content: Menüelement „Daten abrufen“.
-      correctExplanation: Das Menüelement „Daten abrufen“ stellt eine Verbindung mit Daten her, ermöglicht Ihnen jedoch nicht das Strukturieren von Daten.
+      incorrectExplanation: Das Menüelement „Daten abrufen“ stellt eine Verbindung mit Daten her, ermöglicht Ihnen jedoch nicht das Strukturieren von Daten.
       isCorrect: false
     - content: Browser.
       incorrectExplanation: Mit einem Browser können Sie keine Daten strukturieren.
@@ -31,7 +31,7 @@ quiz:
       incorrectExplanation: Der Power BI-Dienst ermöglicht es Ihnen, Berichte und Dashboards anzuzeigen und mit ihnen zu interagieren, das Strukturieren von Daten ist mit dem Dienst jedoch nicht möglich.
       isCorrect: false
     - content: Power Query-Editor.
-      incorrectExplanation: Der Power Query-Editor ist das Tool, das zum Strukturieren und Transformieren von Daten verwendet wird.
+      correctExplanation: Der Power Query-Editor ist das Tool, das zum Strukturieren und Transformieren von Daten verwendet wird.
       isCorrect: true
   - content: Welche der folgenden Aussagen über das Strukturieren von Daten mit Power BI Desktop ist richtig?
     choices:
